--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,12 +43,30 @@ dependencies:
   flutter_riverpod: ^2.1.1
   riverpod_annotation: ^1.0.6
   intl: ^0.17.0
+  url_launcher: ^6.1.6
+  image_picker: ^0.8.6
+  flutter_svg: ^1.1.6
+  in_app_purchase: ^3.0.8
+  animations: ^2.0.7
+  local_auth: ^2.1.2
+  quick_actions: ^1.0.1
+  file_selector: ^0.9.2+2
+  shared_preferences: ^2.0.15
+  google_sign_in: ^5.4.2
+  video_player: ^2.4.7
+  camera: ^0.10.0+4
+  pigeon: ^4.2.5
+  flutter_image: ^4.1.4
+  lottie: ^1.4.3
+  http: ^0.13.5
+  device_info_plus: ^8.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   build_runner:
+  go_router_builder: ^1.0.15
   riverpod_generator: ^1.0.6
 
   # The "flutter_lints" package below contains a set of recommended lints to
