--- a/serverpod_app_flutter/pubspec.yaml
+++ b/serverpod_app_flutter/pubspec.yaml
@@ -33,12 +33,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.5
-  go_router: ^5.1.5
-  flex_color_scheme: ^6.0.1
+  go_router: ^5.2.0
+  flex_color_scheme: ^6.1.0
   flutter_riverpod: ^2.1.1
   riverpod_annotation: ^1.0.6
   intl: ^0.17.0
-  url_launcher: ^6.1.6
+  url_launcher: ^6.1.7
   image_picker: ^0.8.6
   flutter_svg: ^1.1.6
   in_app_purchase: ^3.0.8
@@ -50,11 +50,12 @@ dependencies:
   google_sign_in: ^5.4.2
   video_player: ^2.4.7
   camera: ^0.10.0+4
-  pigeon: ^4.2.5
+  pigeon: ^4.2.6
   flutter_image: ^4.1.4
-  lottie: ^1.4.3
+  lottie: ^2.0.0
   http: ^0.13.5
   device_info_plus: ^8.0.0
+  upgrader: ^5.0.0
 
 dev_dependencies:
   flutter_test:
