--- a/serverpod_app_flutter/pubspec.yaml
+++ b/serverpod_app_flutter/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   http: ^0.13.5
   device_info_plus: ^8.0.0
   upgrader: ^5.0.0
+  internet_connection_checker: ^1.0.0+1
 
 dev_dependencies:
   flutter_test:
