--- a/serverpod_app_flutter/pubspec.yaml
+++ b/serverpod_app_flutter/pubspec.yaml
@@ -57,6 +57,12 @@ dependencies:
   device_info_plus: ^8.0.0
   upgrader: ^5.0.0
   internet_connection_checker: ^1.0.0+1
+  intro_slider: ^4.2.0
+  loading_animation_widget: ^1.2.0+3
+  flutter_launcher_icons: ^0.11.0
+  custom_refresh_indicator: ^2.0.1
+  font_awesome: ^5.10.1
+  expand_widget: ^3.1.0
 
 dev_dependencies:
   flutter_test:
