--- a/serverpod_app_flutter/pubspec.yaml
+++ b/serverpod_app_flutter/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.5
   go_router: ^5.2.0
-  flex_color_scheme: ^6.1.0
+  flex_color_scheme: ^6.1.1
   flutter_riverpod: ^2.1.1
   riverpod_annotation: ^1.0.6
   intl: ^0.17.0
@@ -48,9 +48,8 @@ dependencies:
   file_selector: ^0.9.2+2
   shared_preferences: ^2.0.15
   google_sign_in: ^5.4.2
-  video_player: ^2.4.7
+  video_player: ^2.4.8
   camera: ^0.10.0+4
-  pigeon: ^4.2.6
   flutter_image: ^4.1.4
   lottie: ^2.0.0
   http: ^0.13.5
@@ -63,6 +62,8 @@ dependencies:
   custom_refresh_indicator: ^2.0.1
   font_awesome: ^5.10.1
   expand_widget: ^3.1.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
@@ -71,6 +72,7 @@ dev_dependencies:
   build_runner:
   go_router_builder: ^1.0.15
   riverpod_generator: ^1.0.6
+  hive_generator: ^2.0.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
